# Commander

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh
demo/: donut.cmdr  donut.sh  pokemon.cmdr  quicksort.cmdr  special-pattern.cmdr  special-pattern.sh
documentation/: compiling.md  environment.md  setup.md  spec.md
source/bash_transpiler/: transpiler.cpp  transpiler.hpp
source/builtin_functions/: functions.cpp  functions.hpp
source/console/: console-unix.cpp  console-windows.cpp  console.cpp  console.hpp
source/flow_controller/: flow_controller.cpp  flow_controller.hpp  operations.cpp  operations.hpp  types.cpp  types.hpp
source/interpreter/: commander.cpp  console-unix.cpp  console.hpp  repl.cpp  repl.hpp
source/job_runner/: job_runner.cpp  job_runner.hpp  job_runner_interface.hpp  job_runner_linux.cpp  job_runner_linux.hpp  job_runner_windows.cpp  job_runner_windows.hpp  process.cpp  process.hpp
source/job_runner/builtins/: builtins.cpp  builtins.hpp  print.cpp  print.hpp  scan.cpp  scan.hpp  shared.hpp
source/lexer/: file_position.cpp  file_position.hpp  lexer.cpp  lexer.hpp
source/parser/: ast_node.cpp  ast_node.hpp  grammar.cpp  grammar.hpp  parse_table.cpp  parse_table.hpp  parser.cpp  parser.hpp  parser_action.cpp  parser_action.hpp  production_item.cpp  production_item.hpp
source/parser/generator/: generator.cpp  generator.hpp  grammar.cpp  grammar.hpp  grammar.txt  kernel.cpp  kernel.hpp  lr_item.cpp  lr_item.hpp
source/powershell_transpiler/: transpiler.cpp  transpiler.hpp
source/symbol_table/: Scope.cpp  Scope.hpp  SymbolTableOrganizer.cpp  SymbolTableOrganizer.hpp  scope.cpp  scope.hpp  symbol_table_organizer.cpp  symbol_table_organizer.hpp
source/type_checker/: TypeChecker.cpp  TypeChecker.hpp  type.cpp  type.hpp  type_checker.cpp  type_checker.hpp  var_info.cpp  var_info.hpp  variable_table.cpp  variable_table.hpp
source/util/: combine_hashes.cpp  combine_hashes.hpp  commander_exception.cpp  commander_exception.hpp  constants.hpp  generated_map.hpp  io.cpp  io.hpp  print.cpp  print.hpp  safe_ptr.hpp  scan.cpp  scan.hpp  thread_queue.cpp  thread_queue.hpp
tests/: SymbolTableTests.cpp  SymbolTableTests.hpp  TypeCheckerTests.cpp  TypeCheckerTests.hpp  bash_transpiler_tests.cpp  builtin_functions_tests.cpp  flow_controller_tests.cpp  flow_controller_tests.hpp  job_runner_tests.cpp  lexer_tests.cpp  lexer_tests.hpp  parser_tests.cpp  parser_tests.hpp  symbol_table_tests.cpp  type_checker_tests.cpp  type_checker_tests.hpp
tests/files/bash_transpiler_tests/should_run/: 010.cmdr.expected  011.cmdr.expected  012.cmdr.expected  014.cmdr.expected  016.cmdr.expected  018.cmdr.expected  020.cmdr.expected  021.cmdr.expected  022.cmdr.expected  023.cmdr.expected  024.cmdr.expected  025.cmdr.expected  026.cmdr.expected
tests/files/flow_controller_tests/: script001.cmdr  script002.cmdr  script003.cmdr
tests/files/flow_controller_tests/should_fail/: 000.cmdr  001.cmdr  002.cmdr  003.cmdr  004.cmdr  005.cmdr  006.cmdr  007.cmdr  008.cmdr  009.cmdr  010.cmdr  011.cmdr  012.cmdr  013.cmdr  014.cmdr  015.cmdr  016.cmdr  017.cmdr  018.cmdr  019.cmdr  020.cmdr  021.cmdr  022.cmdr  023.cmdr  024.cmdr  025.cmdr  026.cmdr  027.cmdr  028.cmdr  029.cmdr  030.cmdr  031.cmdr  032.cmdr  033.cmdr  034.cmdr  035.cmdr  036.cmdr  037.cmdr  038.cmdr  039.cmdr  (+73 more)
tests/files/flow_controller_tests/should_run/: 000.cmdr  001.cmdr  002.cmdr  002.cmdr.expected  003.cmdr  003.cmdr.expected  004.cmdr  005.cmdr  006.cmdr  006.cmdr.expected  007.cmdr  007.cmdr.expected  008.cmdr  009.cmdr  010.cmdr  010.cmdr.expected  011.cmdr  011.cmdr.expected  012.cmdr  012.cmdr.expected  013.cmdr  013.cmdr.expected  014.cmdr  014.cmdr.expected  015.cmdr  016.cmdr  016.cmdr.expected  017.cmdr  017.cmdr.expected  018.cmdr  018.cmdr.expected  019.cmdr  019.cmdr.expected  020.cmdr  020.cmdr.expected  021.cmdr  021.cmdr.expected  022.cmdr  022.cmdr.expected  023.cmdr  (+155 more)
tests/files/job_runner_tests/: cat2Output.txt  catOutput.txt  lsOutput.txt
tests/files/job_runner_tests/testDirectory/: cat.txt
tests/files/lexer_tests/: 000.cmdr.expected  001.cmdr  001.cmdr.expected  002.cmdr  002.cmdr.expected  003.cmdr  003.cmdr.expected  004.cmdr  004.cmdr.expected  005.cmdr  005.cmdr.expected  006.cmdr.expected  008.cmdr  008.cmdr.expected  009.cmdr  009.cmdr.expected  010.cmdr  010.cmdr.expected  011.cmdr  011.cmdr.expected  012.cmdr  012.cmdr.expected  013.cmdr  014.cmdr  015.cmdr.expected  016.cmdr.expected  017.cmdr  017.cmdr.expected  018.cmdr.expected  019.cmdr.expected  020.cmdr.expected  021.cmdr  021.cmdr.expected  022.cmdr  022.cmdr.expected  023.cmdr.expected  024.cmdr  024.cmdr.expected  025.cmdr  025.cmdr.expected  (+44 more)
tests/files/lexer_tests/should_fail/: 000.cmdr  001.cmdr  002.cmdr  003.cmdr  004.cmdr  005.cmdr  006.cmdr  007.cmdr  008.cmdr  009.cmdr  010.cmdr  011.cmdr  012.cmdr  013.cmdr  014.cmdr  015.cmdr  016.cmdr  017.cmdr  018.cmdr  019.cmdr  020.cmdr  021.cmdr  022.cmdr  023.cmdr  024.cmdr  025.cmdr  026.cmdr  027.cmdr  028.cmdr  029.cmdr  030.cmdr  031.cmdr  032.cmdr  033.cmdr  034.cmdr  035.cmdr  036.cmdr  037.cmdr  038.cmdr  039.cmdr  (+79 more)
tests/files/lexer_tests/should_lex/: 000.cmdr  000.cmdr.expected  001.cmdr  001.cmdr.expected  002.cmdr  002.cmdr.expected  003.cmdr  003.cmdr.expected  004.cmdr  004.cmdr.expected  005.cmdr  005.cmdr.expected  006.cmdr  006.cmdr.expected  007.cmdr  007.cmdr.expected  008.cmdr  008.cmdr.expected  009.cmdr  009.cmdr.expected  010.cmdr  010.cmdr.expected  011.cmdr  011.cmdr.expected  012.cmdr  012.cmdr.expected  013.cmdr  013.cmdr.expected  014.cmdr  014.cmdr.expected  015.cmdr  015.cmdr.expected  016.cmdr  016.cmdr.expected  017.cmdr  017.cmdr.expected  018.cmdr  018.cmdr.expected  019.cmdr  019.cmdr.expected  (+211 more)
tests/files/parser_tests/should_fail/: 000.cmdr  001.cmdr  002.cmdr  003.cmdr  004.cmdr  005.cmdr  006.cmdr  007.cmdr  008.cmdr  009.cmdr  010.cmdr  011.cmdr  012.cmdr  013.cmdr  014.cmdr  015.cmdr  016.cmdr  017.cmdr  018.cmdr  019.cmdr  020.cmdr  021.cmdr  022.cmdr  023.cmdr  024.cmdr  025.cmdr  026.cmdr  027.cmdr  (+99 more)
(+1558 files in other folders)
